@@ -3,16 +3,16 @@
                *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:30044
+  FORMAL BUILD NUMBER:30045
 */
 
-#define PRODUCT_VER_STRING "3.0.0.30044"
-#define FILE_VER_STRING "WI-T3.0.0.30044"
-#define LICENSE_VER_STRING "WI-T3.0.0.30044"
-#define FILE_VER_NUMBER 3, 0, 0, 30044
+#define PRODUCT_VER_STRING "3.0.0.30045"
+#define FILE_VER_STRING "WI-T3.0.0.30045"
+#define LICENSE_VER_STRING "WI-T3.0.0.30045"
+#define FILE_VER_NUMBER 3, 0, 0, 30045
 #define FB_MAJOR_VER "3"
 #define FB_MINOR_VER "0"
 #define FB_REV_NO "0"
-#define FB_BUILD_NO "30044"
+#define FB_BUILD_NO "30045"
 #define FB_BUILD_TYPE "T"
 #define FB_BUILD_SUFFIX "Firebird 3.0 Unstable"
